--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table cellspacing="20">
     <tr>
-      <td><img height="200 px"src="images/Matt 3-modified.png" alt="Profile Picture"></td>
+      <td><img height="200 px"src="Images/Matt 3-modified.png" alt="Profile Picture"></td>
       <td><h1>Matt Keyser</h1><p><em>Self taught Web Developer</em></p>
       <strong><a href="https://www.linkedin.com/in/matthew-keyser-08b615150/">LinkedIn Profile</a></strong>
       <br />
