--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skill-row">
       <img class="first-skill" src="images/technology.png" alt="technology-icon">
       <h3>Web Design</h3>
-      <p>I am a self taught Web Developer who enjoys being creative when designing my web sites. My goal is to create responsive and innovative web sites that are easy to navigate.</p>
+      <p>I am a self taught Web Developer who enjoys being creative when designing my web sites. My goal is to create responsive and innovative web sites that provide a user interface that is easy to navigate.</p>
     </div>
     <div class="skill-row">
       <img class="second-skill" src="images/tool-box.png" alt="toolbox-icon">
